[package]
name = "dyn_fs_napi"
version = "0.0.1"
edition = "2021"
authors = ["alshdavid"]
repository = "https://github.com/alshdavid/dyn-fs"
description = "Abstraction for the std::fs stdlib"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
dyn_fs = { path = "../dyn_fs" }
napi = { version = "2.16.17", features = ["dyn-symbols"] }
napi-derive = "2.16.13"

[build-dependencies]
napi-build = "2.1.6"
